Add changes html links refers

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Pizza</title>
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../lib/fontawesome/css/all.min.css">
-    <link rel="shortcut icon" href="../img/logo.png">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./lib/fontawesome/css/all.min.css">
+    <link rel="shortcut icon" href="./img/logo.png">
 </head>
 <body>
 
@@ -345,6 +345,6 @@
 
     
 
-  <script src="../js/app.js"></script>  
+  <script src="./js/app.js"></script>  
 </body>
 </html>
