Correction link images Html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!--MENU PRINCIPAL-->
     <div class="menu-principal">
         <div class="logo" id="logo">
-            <img src="../img/logo.png" alt="">
+            <img src="./img/logo.png" alt="">
         </div>
         <div class="menu-bar" id="menuBar">
             <i class="fas fa-angle-right" id="btnMenuClose"></i>
@@ -61,7 +61,7 @@
                     </div>
                     
                     <div class="images-products">
-                        <img src="../img/menu/peperoni.png" alt="">
+                        <img src="./img/menu/peperoni.png" alt="">
                     </div>
                 </div>
 
@@ -73,7 +73,7 @@
                         <button class="btn">Solicitala Aquí! <span class="fas fa-angle-right"></span></button>   
                     </div>
                     <div class="images-products">
-                        <img src="../img/menu/especial.png" alt="">
+                        <img src="./img/menu/especial.png" alt="">
                     </div>
                 </div>
 
@@ -85,7 +85,7 @@
                         <button class="btn">Solicítala Aquí! <span class="fas fa-angle-right"></span></button>   
                     </div>
                     <div class="images-products">
-                        <img src="../img/menu/margarita.png" alt="">
+                        <img src="./img/menu/margarita.png" alt="">
                     </div>
                 </div>
 
@@ -98,7 +98,7 @@
                         <button class="btn">Solicitala Aquí! <span class="fas fa-angle-right"></span></button>   
                     </div>
                     <div class="images-products">
-                        <img src="../img/menu/americana.png" alt="">
+                        <img src="./img/menu/americana.png" alt="">
                     </div>
                 </div>
 
@@ -110,7 +110,7 @@
                         <button class="btn">Solicitala Aquí! <span class="fas fa-angle-right"></span></button>   
                     </div>
                     <div class="images-products">
-                        <img src="../img/menu/suprema.png" alt="">
+                        <img src="./img/menu/suprema.png" alt="">
                     </div>
                 </div>
             </div>
@@ -129,7 +129,7 @@
 
         <div class="container-servicios">
           <div class="imagen-central">
-            <img src="../img/mitad-mitad.png" alt="">
+            <img src="./img/mitad-mitad.png" alt="">
           </div>
 
           <div class="items calidad">
@@ -162,7 +162,7 @@
     <!--SECTION PERSONAL-->
     <section id="equipo">
         <div class="persona">
-            <img src="../img/perfil1.png" alt="" class="persona-imagen">
+            <img src="./img/perfil1.png" alt="" class="persona-imagen">
             <div class="persona-info">
                 <h2 class="title-white">David Muñoz</h2>
                 <div class="fondo-p">
@@ -178,7 +178,7 @@
         </div>
 
         <div class="persona">
-            <img src="../img/perfil2.png" alt="" class="persona-imagen">
+            <img src="./img/perfil2.png" alt="" class="persona-imagen">
             <div class="persona-info">
                 <h2 class="title-white">Eliza Smith</h2>
                 <div class="fondo-p">
@@ -194,7 +194,7 @@
         </div>
 
         <div class="persona">
-            <img src="../img/perfil3.png" alt="" class="persona-imagen"> 
+            <img src="./img/perfil3.png" alt="" class="persona-imagen"> 
             <div class="persona-info">
                 <h2>Jesús Alonso</h2>
                 <div class="fondo-p">
@@ -210,7 +210,7 @@
         </div>
 
         <div class="persona">
-            <img src="../img/perfil4.png" alt="" class="persona-imagen">
+            <img src="./img/perfil4.png" alt="" class="persona-imagen">
             <div class="persona-info">
                 <h2>Mariza Sánchez</h2>
                 <div class="fondo-p">
@@ -230,7 +230,7 @@
     <section id="ingredients">
 
         <div class="ingre">
-            <img src="../img/ingredientes1.jpg" alt="" class="image-ingre">
+            <img src="./img/ingredientes1.jpg" alt="" class="image-ingre">
             <div class="info-ingre">
                 <p><span class="fas fa-cheese"></span></p>
                 <p class="text-ingre">Quesos</p>
@@ -240,7 +240,7 @@
         </div>
 
         <div class="ingre">
-            <img src="../img/ingredientes2.jpg" alt="" class="image-ingre">
+            <img src="./img/ingredientes2.jpg" alt="" class="image-ingre">
             <div class="info-ingre">
                 <p><span class="fas fa-leaf"></span></p>
                 <p class="text-ingre">Vegetales</p>
@@ -250,7 +250,7 @@
         </div>
 
         <div class="ingre">
-            <img src="../img/ingredientes3.jpg" alt="" class="image-ingre">
+            <img src="./img/ingredientes3.jpg" alt="" class="image-ingre">
             <div class="info-ingre">
                 <p><span class="fas fa-fill-drip"></span></p>
                 <p class="text-ingre">Salsa</p>
@@ -260,7 +260,7 @@
         </div>
 
         <div class="ingre">
-            <img src="../img/ingredientes4.jpg" alt="" class="image-ingre">
+            <img src="./img/ingredientes4.jpg" alt="" class="image-ingre">
             <div class="info-ingre">
                 <p><span class="fas fa-drumstick-bite"></span></p>
                 <p class="text-ingre">Carne</p>
